[fix] fix sass imports, use vite aliases

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,8 @@
+@use '@styles/variables';
+
 .app {
     display: grid;
     grid-template-rows: 33% auto 10%;
     min-height: 100vh;
-    background-color: $light;
+    background-color: variables.$light;
 }
