--- a/src/styles/config/_global.scss
+++ b/src/styles/config/_global.scss
@@ -1,6 +1,4 @@
-@import '../variables/media.scss';
-@import '../variables/colors.scss';
-@import '../variables/utils.scss';
+@use '../variables/colors' as c;
 
 :root {
     line-height: 1;
@@ -15,5 +13,5 @@
 html {
     font-size: 18px;
     font-family: 'Josefin Sans', sans-serif;
-    color: $darkest;
+    color: c.$darkest;
 }
