--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,5 @@
+@use '@styles/variables';
+
 .header {
     background-image: url('../assets/images/bg-mobile-light.jpg');
     height: 100%;
@@ -5,15 +7,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: $padding-xl $padding-l;
+    padding: variables.$padding-xl variables.$padding-l;
 
     &__title {
-        color: $lighter;
+        color: variables.$lighter;
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 0.25em;
         line-height: 1;
-        margin-bottom: $padding-s;
+        margin-bottom: variables.$padding-s;
         text-transform: uppercase;
     }
 }
