--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -1,5 +1,7 @@
+@use '@styles/variables';
+
 .title {
     font-size: 1.5em;
     letter-spacing: 2;
-    color: $lighter;
+    color: variables.$lighter;
 }
