--- a/src/components/app-paper/_index.scss
+++ b/src/components/app-paper/_index.scss
@@ -2,6 +2,7 @@
 
 .app-paper {
     border-radius: 0.33em;
-    padding: 1em;
+    padding: 1.25em;
     background-color: variables.$lighter;
+    min-height: 1.25em;
 }
