--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,12 +2,12 @@
 
 .header {
     background-image: url('../assets/images/bg-mobile-light.jpg');
-    height: 100%;
-    width: 100%;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    height: fit-content;
     padding: variables.$padding-xl variables.$padding-l;
+    width: 100%;
 
     &__title {
         color: variables.$lighter;
@@ -18,4 +18,11 @@
         margin-bottom: variables.$padding-s;
         text-transform: uppercase;
     }
+}
+
+.app-paper__header {
+    align-items: center;
+    column-gap: 1em;
+    display: flex;
+    flex-wrap: nowrap;
 }
